--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,9 +19,6 @@ jobs:
           ruby-version: .ruby-version
           bundler-cache: true
 
-      - name: Make bin scripts executable for scan_ruby
-        run: chmod +x bin/*
-
       - name: Scan for common Rails security vulnerabilities using static analysis
         run: bin/brakeman --no-pager
 
@@ -38,11 +35,8 @@ jobs:
           ruby-version: .ruby-version
           bundler-cache: true
 
-      - name: Make bin scripts executable for scan_js
-        run: chmod +x bin/*
-
       - name: Scan for security vulnerabilities in JavaScript dependencies
-        run: bin/rails importmap audit 
+        run: bin/importmap audit
 
   lint:
     runs-on: ubuntu-latest
@@ -55,9 +49,6 @@ jobs:
         with:
           ruby-version: .ruby-version
           bundler-cache: true
-
-      - name: Make bin scripts executable for lint
-        run: chmod +x bin/*
 
       - name: Lint code for consistent style
         run: bin/rubocop -f github
@@ -93,9 +84,6 @@ jobs:
         with:
           ruby-version: .ruby-version
           bundler-cache: true
-
-      - name: Make bin scripts executable for test
-        run: chmod +x bin/*
 
       - name: Run tests
         env:
