--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,6 @@ services:
 
   web:
     build: .
-    # command: rails new . --force --database=postgresql
     command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
     volumes:
       - .:/app
@@ -20,6 +19,8 @@ services:
     environment:
       RAILS_ENV: development
       DATABASE_URL: postgres://postgres:password@db:5432/historia_development
-
+    env_file:
+      - .env
+      
 volumes:
   postgres_data:
