--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,18 +9,20 @@ services:
 
   web:
     build: .
-    command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
+    command: bin/dev
     volumes:
       - .:/app
     ports:
       - "3000:3000"
     depends_on:
       - db
+    tty: true
+    stdin_open: true
     environment:
       RAILS_ENV: development
       DATABASE_URL: postgres://postgres:password@db:5432/historia_development
     env_file:
       - .env
-      
+
 volumes:
   postgres_data:
