--- a/render.yaml
+++ b/render.yaml
@@ -9,7 +9,7 @@ services:
       - key: DATABASE_URL
         fromDatabase:
           name: historia-db
-          property: connectionString
+          property: internalConnectionString
       - key: RAILS_MASTER_KEY
         sync: false
   - type: web
@@ -22,7 +22,7 @@ services:
       - key: DATABASE_URL
         fromDatabase:
           name: historia-db
-          property: connectionString
+          property: internalConnectionString
       - key: RAILS_MASTER_KEY
         fromService:
           type: web
