--- a/render.yaml
+++ b/render.yaml
@@ -7,12 +7,15 @@ services:
     branch: main
     autoDeploy: false
     envVars:
+      - key: RAILS_ENV
+        value: production
       - key: DATABASE_URL
         fromDatabase:
           name: historia-db
           property: connectionString
       - key: RAILS_MASTER_KEY
         sync: false
+
   - type: web
     name: historia-staging
     env: docker
@@ -21,6 +24,8 @@ services:
     branch: main
     autoDeploy: true
     envVars:
+      - key: RAILS_ENV
+        value: production
       - key: DATABASE_URL
         fromDatabase:
           name: historia-db
