add-ログイン、ログアウトテスト

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,9 @@ services:
       POSTGRES_PASSWORD: password
 
   web:
-    build: .
+    build:
+      context: .
+      target: production # 本番/開発用はproductionステージを使う
     command: bin/dev
     volumes:
       - .:/app
@@ -21,6 +23,20 @@ services:
     environment:
       RAILS_ENV: development
       DATABASE_URL: postgres://postgres:password@db:5432/historia_development
+    env_file:
+      - .env
+
+  runner:
+    build:
+      context: .
+      target: base
+    volumes:
+      - .:/app
+    depends_on:
+      - db
+    environment:
+      RAILS_ENV: test # テスト環境を指定
+      DATABASE_URL: postgres://postgres:password@db:5432/historia_test
     env_file:
       - .env
 
